Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
Impala 2.12.0
-
None
-
ghx-label-3
Description
As a follow-up to IMPALA-6484, we should fix the broken SortChildren() API that is not thread-safe and dangerous. We should replace it with something that sorts the children by total time using stable values that can't be modified concurrently by other threads.
Attachments
Issue Links
- relates to
-
IMPALA-6484 Crash in impala::RuntimeProfile::SortChildren
- Resolved