be/src/util/runtime-profile.h
@@ -40,7 +40,7 @@ class ObjectPool;
 /// single thread per process that will convert an amount (i.e. bytes) counter to a
 /// corresponding rate based counter.  This thread wakes up at fixed intervals and updates
 /// all of the rate counters.
-/// Thread-safe.
+/// All methods are thread-safe unless otherwise mentioned.
 class RuntimeProfile { // NOLINT: This struct is not packed, but there are not so many
                        // of them that it makes a performance difference
  public:
@@ -116,7 +116,7 @@ class RuntimeProfile { // NOLINT: This struct is not packed, but there are not s
   static RuntimeProfile* CreateFromThrift(ObjectPool* pool,
       const TRuntimeProfileTree& profiles);
 
-  /// Adds a child profile.  This is thread safe.
+  /// Adds a child profile.
   /// Checks if 'child' is already added by searching for its name in the
   /// child map, and only adds it if the name doesn't exist.
   /// 'indent' indicates whether the child will be printed w/ extra indentation
@@ -136,13 +136,9 @@ class RuntimeProfile { // NOLINT: This struct is not packed, but there are not s
   RuntimeProfile* CreateChild(
       const std::string& name, bool indent = true, bool prepend = false);
 
-  /// Sorts all children according to a custom comparator. Does not
+  /// Sorts all children according to descending total time. Does not
   /// invalidate pointers to profiles.
-  template <class Compare>
-  void SortChildren(const Compare& cmp) {
-    boost::lock_guard<SpinLock> l(children_lock_);
-    std::sort(children_.begin(), children_.end(), cmp);
-  }
+  void SortChildrenByTotalTime();
 
   /// Updates the AveragedCounter counters in this profile with the counters from the
   /// 'src' profile. If a counter is present in 'src' but missing in this profile, a new
